--- a/actions/detect-build-scripts/action.yml
+++ b/actions/detect-build-scripts/action.yml
@@ -10,5 +10,6 @@ runs:
     - uses: actions/github-script@v3
       with: 
         script: |
-          console.log(process.cwd());
-          core.setOutput("scripts", Object.keys(require('./package.json').scripts).filter(script => script.startsWith('build')))
+          const packageInfoPath = path.join(content.github.workspace, 'package.json');
+
+          core.setOutput("scripts", Object.keys(require(packageInfoPath).scripts).filter(script => script.startsWith('build')))
