fix: use context

--- a/actions/detect-build-scripts/action.yml
+++ b/actions/detect-build-scripts/action.yml
@@ -11,7 +11,7 @@ runs:
       with: 
         script: |
           const path = require('path');
-          
-          const packageInfoPath = path.join(content.github.workspace, 'package.json');
+
+          const packageInfoPath = path.join(context.github.workspace, 'package.json');
 
           core.setOutput("scripts", Object.keys(require(packageInfoPath).scripts).filter(script => script.startsWith('build')))
