fix: use github context

--- a/actions/detect-build-scripts/action.yml
+++ b/actions/detect-build-scripts/action.yml
@@ -12,6 +12,6 @@ runs:
         script: |
           const path = require('path');
 
-          const packageInfoPath = path.join(context.github.workspace, 'package.json');
+          const packageInfoPath = path.join('${{ github.workspace }}', 'package.json');
 
           core.setOutput("scripts", Object.keys(require(packageInfoPath).scripts).filter(script => script.startsWith('build')))
