--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,4 +13,4 @@ jobs:
       - id: detect
         uses: ./actions/detect-build-scripts
 
-      - run: "echo ${{ toJSON(steps.detect.outputs.scripts) }}"
+      - run: "echo ${{ toJSON(steps.detect.outputs.scripts[0]) }}"
