--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,4 +13,9 @@ jobs:
       - id: detect
         uses: ./actions/detect-build-scripts
 
-      - run: "echo ${{ steps.detect.outputs.scripts[0] }}"
+      - uses: actions/github-script
+        with:
+          script: |
+          const json = (${{ steps.detect.outputs.scripts }});
+
+          console.log(json[0])
