--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,12 +10,4 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       
-      - id: detect
-        uses: ./actions/detect-build-scripts
-
-      - uses: actions/github-script@v6
-        with:
-          script: |
-            const json = (${{ steps.detect.outputs.scripts }});
-
-            console.log(json[0])
+      - uses: ./actions/build-package
