--- a/actions/detect-build-scripts/action.yml
+++ b/actions/detect-build-scripts/action.yml
@@ -11,6 +11,8 @@ runs:
       uses: actions/github-script@v3
       with: 
         script: |
+          console.log(321);
+          
           const path = require('path');
 
           const packageInfoPath = path.join('${{ github.workspace }}', 'package.json');
