--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,4 +10,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       
-      - uses: ./actions/build-package
+      - id: detect
+        uses: ./actions/detect-build-scripts
+      
+      - runs: "echo ${{ steps.detect.outputs.scripts }}"
