--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,6 +11,4 @@ jobs:
       - uses: actions/checkout@v3
       
       - id: detect
-        uses: ./actions/detect-build-scripts
-      
-      - run: "echo ${{ fromJSON(steps.detect.outputs.scripts)[0] }}"
+        uses: ./actions/build-package
