--- a/actions/build-package/action.yml
+++ b/actions/build-package/action.yml
@@ -6,7 +6,4 @@ runs:
     - id: detect_build_scripts
       uses: ./actions/detect-build-scripts
 
-    - uses: actions/github-script@v6
-      with:
-        script: |
-          console.log((${{ steps.detect_build_scripts.outputs.scripts }})[0])
+    - run: "echo ${{ steps.detect_build_scripts.outputs.scripts[0] }}""
