--- a/actions/build-package/action.yml
+++ b/actions/build-package/action.yml
@@ -6,4 +6,4 @@ runs:
     - id: detect_build_scripts
       uses: ./actions/detect-build-scripts
 
-    - run: "echo ${{ steps.detect_build_scripts.outputs.scripts[0] }}""
+    - run: "echo ${{ steps.detect_build_scripts.outputs.scripts[0] }}"
