--- a/actions/build-package/action.yml
+++ b/actions/build-package/action.yml
@@ -6,6 +6,6 @@ runs:
     - id: detect_build_scripts
       uses: ./actions/detect-build-scripts
 
-    - if: ${{ contains(steps.detect_build_scripts.outputs.scripts, 'build') }}
+    - if: ${{ contains(fromJSON(steps.detect_build_scripts.outputs.scripts), 'build') }}
       run: "echo ok"
       shell: bash
