--- a/actions/build-package/action.yml
+++ b/actions/build-package/action.yml
@@ -14,3 +14,4 @@ runs:
     
     - if: ${{ contains(fromJSON(steps.detect_build_scripts.outputs.scripts), 'build-docker') }}
       run: "echo docker"
+      shell: bash
