--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,4 +11,4 @@ jobs:
       - uses: actions/checkout@v3
       
       - id: detect
-        uses: ./actions/build-package
+        uses: ./actions/build
