--- a/actions/prepare/action.yml
+++ b/actions/prepare/action.yml
@@ -4,9 +4,9 @@ runs:
   using: composite
   steps:
     - if: ${{ github.event.pull_request }}
-      using: actions/checkout@v3
+      uses: actions/checkout@v3
       with:
         ref: ${{ github.event.pull_request.merged_commit_sha }}
     
     - if: ${{ !github.event.pull_request }}
-      using: actions/checkout@v3
+      uses: actions/checkout@v3
