--- a/actions/prepare/action.yml
+++ b/actions/prepare/action.yml
@@ -6,7 +6,7 @@ runs:
     - uses: actions/github-script@v6
       with:
         script: |
-          console.log(${{ github.event }})
+          console.log(${{ toJSON(github.event) }})
     - if: ${{ github.event.pull_request }}
       uses: actions/checkout@v3
       with:
