--- a/actions/prepare/action.yml
+++ b/actions/prepare/action.yml
@@ -3,14 +3,10 @@ name: Prepare
 runs:
   using: composite
   steps:
-    - uses: actions/github-script@v6
-      with:
-        script: |
-          console.log(${{ toJSON(github.event) }})
     - if: ${{ github.event.pull_request }}
       uses: actions/checkout@v3
       with:
-        ref: ${{ github.event.pull_request.merged_commit_sha }}
+        ref: ${{ github.event.pull_request.merge_commit_sha }}
     
     - if: ${{ !github.event.pull_request }}
       uses: actions/checkout@v3
