--- a/actions/detect-pr-type/action.yml
+++ b/actions/detect-pr-type/action.yml
@@ -2,13 +2,18 @@ name: Detect PR type
 
 outputs: 
   type:
-    value: ${{ steps.detect-type.type }}
+    value: ${{ steps.detect-type.outputs.type }}
 
 runs:
   using: composite
   steps:
+    - id: detect-title
+      uses: DevExpress/testcafe-build-system/actions/detect-pr-title@main
+
     - uses: actions/github-script@v6
       if: ${{ github.event.pull_request }}
+      env:
+        TBS_PR_TITLE: ${{ steps.detect-title.outputs.title }}
       with:
         script: |
-          console.log(process.env)
+          core.setOutput('type', process.env.TBS_PR_TITLE.match(/(\S*):/)?.at(1))
