fix: correct metadata for detect-pr-title

--- a/actions/detect-pr-title/action.yml
+++ b/actions/detect-pr-title/action.yml
@@ -1,8 +1,8 @@
 name: Detect PR title
 
 outputs: 
-  type:
-    title: ${{ steps.detect-title.outputs.type }}
+  title:
+    value: ${{ steps.detect-title.outputs.type }}
 
 runs:
   using: composite
