fix: correct output name in detect-pr-title

--- a/actions/detect-pr-title/action.yml
+++ b/actions/detect-pr-title/action.yml
@@ -2,7 +2,7 @@ name: Detect PR title
 
 outputs: 
   title:
-    value: ${{ steps.detect-title.outputs.type }}
+    value: ${{ steps.detect-title.outputs.title }}
 
 runs:
   using: composite
