--- a/actions/detect-pr-type/action.yml
+++ b/actions/detect-pr-type/action.yml
@@ -11,7 +11,7 @@ runs:
       uses: DevExpress/testcafe-build-system/actions/detect-pr-title@main
 
     - shell: bash
-      run: echo ${{ toJSON(steps) }}
+      run: echo "${{ toJSON(steps) }}"
     - uses: actions/github-script@v6
       if: ${{ github.event.pull_request }}
       env:
