--- a/actions/detect-pr-type/action.yml
+++ b/actions/detect-pr-type/action.yml
@@ -10,12 +10,11 @@ runs:
     - id: detect-title
       uses: DevExpress/testcafe-build-system/actions/detect-pr-title@main
 
-    - uses: actions/github-script@v6
+    - id: detect-type
+      uses: actions/github-script@v6
       if: ${{ github.event.pull_request }}
       env:
         TBS_PR_TITLE: ${{ steps.detect-title.outputs.title }}
       with:
         script: |
-          console.log(process.env.TBS_PR_TITLE.match(/^\s*(\S*):/), process.env.TBS_PR_TITLE.match(/^\s*(\S*):/)?.at(1));
-          
           core.setOutput('type', process.env.TBS_PR_TITLE.match(/^\s*(\S*):/)?.at(1))
