test: add debug print

--- a/actions/release-lock/action.yml
+++ b/actions/release-lock/action.yml
@@ -11,6 +11,9 @@ runs:
     - id: detect-pr-type
       uses: DevExpress/testcafe-build-system/actions/detect-pr-type@main
 
+    - shell: bash
+      run: echo ${{ steps.detect-pr-type.outputs.type }}
+      
     - uses: actions/github-script@v6
       if: ${{ steps.detect-pr-type.outputs.type != 'release' && inputs.lock }}
       with:
