--- a/actions/release-lock/action.yml
+++ b/actions/release-lock/action.yml
@@ -12,8 +12,8 @@ runs:
       uses: DevExpress/testcafe-build-system/actions/detect-pr-type@main
 
     - shell: bash
-      run: echo ${{ steps.detect-pr-type.outputs.type }}
-      
+      run: echo ${{ steps.detect-pr-type.outputs.type }} ${{ github.event.pull_request.title }}
+
     - uses: actions/github-script@v6
       if: ${{ steps.detect-pr-type.outputs.type != 'release' && inputs.lock }}
       with:
