--- a/actions/detect-pr-title/action.yml
+++ b/actions/detect-pr-title/action.yml
@@ -18,6 +18,6 @@ runs:
           const owner  = event.repository.owner.login;
           const number = event.pull_request.number;
 
-          const pullRequest = await github.pulls.get({ owner, repo, pull_number: number });
+          const pullRequest = await github.rest.pulls.get({ owner, repo, pull_number: number });
 
           core.setOutput('title', pullRequest.title);
