fix: reference data as pullRequest

--- a/actions/detect-pr-title/action.yml
+++ b/actions/detect-pr-title/action.yml
@@ -18,8 +18,6 @@ runs:
           const owner  = event.repository.owner.login;
           const number = event.pull_request.number;
 
-          const pullRequest = await github.rest.pulls.get({ owner, repo, pull_number: number });
+          const { data: pullRequest } = await github.rest.pulls.get({ owner, repo, pull_number: number });
 
-          console.log(pullRequest);
-          
           core.setOutput('title', pullRequest.title);
