--- a/actions/publish-with-publish-please/action.yml
+++ b/actions/publish-with-publish-please/action.yml
@@ -5,6 +5,8 @@ runs:
   steps:
     - uses: DevExpress/testcafe-build-system/actions/prepare@main
 
+    - uses: DevExpress/testcafe-build-system/actions/build@main
+    
     - shell: bash
       run: npm install
       
