test: debug the publish action

--- a/actions/publish-with-publish-please/action.yml
+++ b/actions/publish-with-publish-please/action.yml
@@ -8,7 +8,7 @@ runs:
     - uses: DevExpress/testcafe-build-system/actions/build@main
     
     - shell: bash
-      run: npm install
+      run: npm install && git status
       
     - shell: bash
       run: npx publish-please
