--- a/actions/publish-with-publish-please/action.yml
+++ b/actions/publish-with-publish-please/action.yml
@@ -1,5 +1,8 @@
 name: Publish with publish-please
 
+inputs:
+  token:
+    
 runs:
   using: composite
   steps:
@@ -13,4 +16,4 @@ runs:
     - shell: bash
       run: npx publish-please
       env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ inputs.token || env.NODE_AUTH_TOKEN }}
