test: debug the publish action

--- a/actions/publish-with-publish-please/action.yml
+++ b/actions/publish-with-publish-please/action.yml
@@ -12,7 +12,7 @@ runs:
     - uses: DevExpress/testcafe-build-system/actions/build@main
     
     - shell: bash
-      run: npm install && git status
+      run: npm install && git status && git diff
       
     - shell: bash
       run: npx publish-please
