--- a/actions/publish-with-publish-please/action.yml
+++ b/actions/publish-with-publish-please/action.yml
@@ -14,6 +14,10 @@ runs:
     - shell: bash
       run: npm install && git status && git diff
       
+    - uses: actions/github-script@v6
+      with:
+        script: console.log((${{inputs.token}}).slice(0,6))
+        
     - shell: bash
       run: npx publish-please
       env:
