--- a/actions/publish-with-publish-please/action.yml
+++ b/actions/publish-with-publish-please/action.yml
@@ -13,12 +13,9 @@ runs:
     
     - shell: bash
       run: npm install && git status && git diff
-      
-    - uses: actions/github-script@v6
-      with:
-        script: console.log(("${{inputs.token}}").slice(0,6))
 
     - shell: bash
       run: npx publish-please
       env:
-          NODE_AUTH_TOKEN: ${{ inputs.token || env.NODE_AUTH_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ inputs.token || env.NPM_TOKEN || env.NODE_AUTH_TOKEN }}
+          NPM_TOKEN: ${{ inputs.token || env.NPM_TOKEN || env.NODE_AUTH_TOKEN }}
