--- a/actions/publish-with-publish-please/action.yml
+++ b/actions/publish-with-publish-please/action.yml
@@ -1,6 +1,9 @@
 name: Publish with publish-please
 
 inputs:
+  registry:
+    required: false
+    default: 'registry.npmjs.org'
   token:
     required: false
     
@@ -10,12 +13,9 @@ runs:
     - uses: DevExpress/testcafe-build-system/actions/prepare@main
 
     - uses: DevExpress/testcafe-build-system/actions/build@main
-    
-    - shell: bash
-      run: npm install && git status && git diff
 
     - shell: bash
-      run: npm run publish-please
-      env:
-          NODE_AUTH_TOKEN: ${{ inputs.token || env.NPM_TOKEN || env.NODE_AUTH_TOKEN }}
-          NPM_TOKEN: ${{ inputs.token || env.NPM_TOKEN || env.NODE_AUTH_TOKEN }}
+      run: npm config set "//${{ inputs.registry }}/:_authToken" "${{ inputs.token || env.NPM_TOKEN || env.NODE_AUTH_TOKEN }} "
+
+    - shell: bash
+      run: npx publish-please
