--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,4 +12,4 @@ jobs:
       - uses: actions/github-script@v6
         with:
           script: |
-            console.log(require('fs').readFileSync(process.env.GITHUB_STEP_SUMMARY));
+            console.log(require('fs').readFileSync(process.env.GITHUB_STEP_SUMMARY).toString());
