--- a/actions/detect-package-metadata/action.yml
+++ b/actions/detect-package-metadata/action.yml
@@ -30,8 +30,12 @@ runs:
 
           const workspaces = packageInfo.workspaces || [];
 
-          core.setOutput('workspaces', workspaces.map(w => { 
+          const workspacesData = JSON.stringify(workspaces.map(w => { 
             const workspaceInfo = require(joinPath(w, 'package.json'));
 
             return { path: w, name: workspaceInfo.name, version: workspaceInfo.version }; 
           }));
+
+          console.log(workspacesData);
+          
+          core.setOutput('workspaces', workspacesData);
