--- a/actions/detect-package-metadata/action.yml
+++ b/actions/detect-package-metadata/action.yml
@@ -7,6 +7,8 @@ outputs:
     value: ${{ steps.detect_scripts.outputs.version }}
   scripts:
     value: ${{ steps.detect_scripts.outputs.scripts }}
+  workspaces:
+    value: ${{ steps.detect_scripts.outputs.workspaces }}
 
 runs:
   using: "composite"
