fix: use exec.exec

--- a/actions/load-artifacts-npm/action.yml
+++ b/actions/load-artifacts-npm/action.yml
@@ -19,5 +19,5 @@ runs:
           const workspaces = JSON.parse(${{ toJSON(steps.detect-package-metadata.outputs.workspaces) }});
 
           for (const workspace of workspaces)
-            await exec(`tar -C ${workspace.path} -xzf .builds/${workspace.name}-${workspace.version}.tgz`)
+            await exec.exec(`tar -C ${workspace.path} -xzf .builds/${workspace.name}-${workspace.version}.tgz`)
 
