fix: use correct command to tweak ownership

--- a/actions/fix-package-access-npm/action.yml
+++ b/actions/fix-package-access-npm/action.yml
@@ -15,4 +15,4 @@ runs:
       uses: DevExpress/testcafe-build-system/actions/detect-package-metadata@main
 
     - shell: bash
-      run: npm access grant read-write "${{ inputs.package || steps.detect-package-name.outputs.name }}" "${{ inputs.owner }}"
+      run: npm owner add "${{ inputs.owner }}" "${{ inputs.package || steps.detect-package-name.outputs.name }}" 
