--- a/actions/login-npm/action.yml
+++ b/actions/login-npm/action.yml
@@ -15,5 +15,6 @@ runs:
   steps:
     - shell: bash
       run: |
-        npm config set registry "${{ inputs.protocol }}://${{ inputs.registry }}"
+        npm config set registry "${{ inputs.protocol }}://${{ inputs.registry }}/"
         npm config set "//${{ inputs.registry }}/:_authToken" "${{ inputs.token || env.NPM_TOKEN || env.NODE_AUTH_TOKEN }}"
+        npm whoami
