test: debug ownership action

--- a/actions/fix-package-access-npm/action.yml
+++ b/actions/fix-package-access-npm/action.yml
@@ -15,4 +15,6 @@ runs:
       uses: DevExpress/testcafe-build-system/actions/detect-package-metadata@main
 
     - shell: bash
+      run:   npm whoami
+    - shell: bash
       run: npm owner add "${{ inputs.owner }}" "${{ inputs.package || steps.detect-package-name.outputs.name }}" 
