--- a/actions/publish-with-publish-please/action.yml
+++ b/actions/publish-with-publish-please/action.yml
@@ -25,7 +25,7 @@ runs:
 
     # TODO: do something with "npm install" changing package-lock.json
     - shell: bash
-      run: git checkout -- package-lock.json
+      run: git checkout -- package-lock.json || true
 
     - shell: bash
       run: npx publish-please
