--- a/actions/publish-with-publish-please/action.yml
+++ b/actions/publish-with-publish-please/action.yml
@@ -28,4 +28,4 @@ runs:
       run: git checkout -- package-lock.json || true
 
     - shell: bash
-      run: npx publish-please
+      run: npx publish-please || (git status && false)
