fix: make label actions work

--- a/configs/sync-workflows.yml
+++ b/configs/sync-workflows.yml
@@ -4,3 +4,5 @@ group:
   files:
     - source: workflows/
       dest: .github/workflows/
+    - source: configs/labels.yml
+      dest: .github/labels.yml
