--- a/actions/handle-labels/action.yml
+++ b/actions/handle-labels/action.yml
@@ -5,4 +5,6 @@ runs:
   steps:
     - uses: dessant/label-actions@v2
       with:
-        config-path: ${{ github.action_path}}/../../configs/labels.yml
+        # TODO: for now we should keep the config file in the each repo
+        # We should do something to keep only a single config file
+        config-path: .github/labels.yml
