--- a/actions/prepare/action.yml
+++ b/actions/prepare/action.yml
@@ -1,8 +1,17 @@
 name: Prepare
 
+inputs:
+  node-version:
+    required: false
+
 runs:
   using: composite
   steps:
+    - if: ${{ inputs.node-version}}
+      uses: actions/setup-node@v3
+      with: 
+        node-version: ${{ inputs.node-version }}
+
     - if: ${{ github.event.pull_request }}
       uses: DevExpress/testcafe-build-system/actions/checkout-pr@main
     
