fix: fixed package name template

--- a/actions/read-artifacts/action.yml
+++ b/actions/read-artifacts/action.yml
@@ -48,11 +48,11 @@ runs:
 
     - run: |
         unzip package.zip
-        tar --strip-components=1 -xzf ${{ inputs.package-name }}*.tgz
+        tar --strip-components=1 -xzf ${{ inputs.package-name }}-*.tgz
       shell: bash # define shell in the case when os isn't ubuntu
       if: ${{ !inputs.is-docker }}
 
     - run: |
         unzip docker.zip
-        docker load -i ${{ inputs.package-name }}*.tar
+        docker load -i ${{ inputs.package-name }}-*.tar
       if: ${{ inputs.is-docker }}
