--- a/actions/read-artifacts/action.yml
+++ b/actions/read-artifacts/action.yml
@@ -8,6 +8,9 @@ inputs:
     default: false
   node-version:
     required: false
+  is-docker-num:
+    required: false
+    default: 0
 
 runs:
   using: composite
@@ -56,13 +59,22 @@ runs:
       run: |
         echo "!inputs.is-docker - ${{ !inputs.is-docker }}"
         echo "inputs.is-docker - ${{ inputs.is-docker }}"
+        echo "inputs.is-docker == false - ${{ inputs.is-docker == false }}"
+        echo "inputs.is-docker == true - ${{ inputs.is-docker == true }}"
+        echo "!!inputs.is-docker - ${{ !!inputs.is-docker }}"
 
     - shell: bash
       run: |
         echo "inputs.package-name - ${{ inputs.package-name }}"
 
     - shell: bash
-      if: ${{ !inputs.is-docker }}
+      if: ${{ is-docker-num == 0 }}
       run: |
         unzip package.zip
         tar --strip-components=1 -xzf ${{ inputs.package-name }}-*.tgz
+
+    - shell: bash
+      if: ${{ is-docker-num == 1 }}
+      run: |
+        unzip docker.zip
+        docker load -i ${{ inputs.package-name }}-*.tar
