--- a/actions/read-artifacts/action.yml
+++ b/actions/read-artifacts/action.yml
@@ -62,19 +62,20 @@ runs:
         echo "inputs.is-docker == false - ${{ inputs.is-docker == false }}"
         echo "inputs.is-docker == true - ${{ inputs.is-docker == true }}"
         echo "!!inputs.is-docker - ${{ !!inputs.is-docker }}"
+        echo "inputs.is-docker-num - ${{ inputs.is-docker-num }}"
 
     - shell: bash
       run: |
         echo "inputs.package-name - ${{ inputs.package-name }}"
 
     - shell: bash
-      if: ${{ is-docker-num == 0 }}
+      if: ${{ inputs.is-docker-num == 0 }}
       run: |
         unzip package.zip
         tar --strip-components=1 -xzf ${{ inputs.package-name }}-*.tgz
 
     - shell: bash
-      if: ${{ is-docker-num == 1 }}
+      if: ${{ inputs.is-docker-num == 1 }}
       run: |
         unzip docker.zip
         docker load -i ${{ inputs.package-name }}-*.tar
